--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <jad-header></jad-header>
 <jad-student *ngFor="let student of students" [student]="student"></jad-student> 
+<jad-student></jad-student>
